Bootstrap/TinDog/css/styles.css
h1, h2, h3, h4, h5, h6 {
    font-family: 'Montserrat', sans-serif;
}

/* h3 {
    font-weight: 900;
    font-size: 1.4rem;
} */

p {
    color: #8f8f8f;
}

body {
    font-family: 'Montserrat', sans-serif;
    text-align: center;
}

/* Headings */
.big-heading {
    font-family: 'Montserrat', sans-serif;
    font-size: 3.5rem;
    line-height: 1.5;
    font-weight: 900;
}

.section-heading {
    font-weight: 800;
    font-size: 3rem;
    line-height: 1.5;
}

/* Containers */

.container-fluid {
    padding: 7% 15%;
}

/* Sections */
.colored-section {
    background-color: #ff4c68 ;
    color: #fff;
}

.white-section {
    background-color: #fff;

}

/* Navigation Bar */
.navbar {
    padding-bottom: 4.5rem;
}

.navbar-brand {
    font-family: 'Ubuntu';
    font-size: 2.5rem;
    font-weight: bold;
}

.nav-item {
    padding: 0 18px;
}

.nav-link {
    font-family: 'Montserrat';
    font-size: 1.2rem;
    font-weight: 300;
}

/* Download Buttons */
.download-button {
    margin: 5% 3% 5% 0%;
}

/* Title Section */

#title .container-fluid {
    padding: 3% 15% 7%;
    text-align: left;
}

/* Title Image */
.title-img {
    width: 60%;
    transform: rotate(25deg);
    position: absolute;
    right: 30%;
}

.title-img-div {
    position:relative;
}


/* Features section */
#features {
    position:relative;
}

.feature-title {
    font-weight: 900;
    font-size: 1.4rem;
}

.feature-box {
    padding: 5%;
}

.feature-icon {
    color: #ef8172;
    margin-bottom: 1rem;
}

.feature-icon:hover {
    color: #ff4c68;
}

/* Testimonial Section */
#testimonials {
    background-color: #ef8172;
}

.testimonial-text {
    font-size: 3rem;
    line-height: 1.5;
    font-weight: 800;
}

.testimonial-image {
    width: 10%;
    border-radius: 100%;
    margin: 20px;
}

/* Press section */
#press {
    background-color: #ef8172;
    padding-bottom: 3%;
}

.press-logos {
    width: 15%;
    margin: 20px 20px 50px;
}

/* Pricing Section */

#pricing {
    padding: 7% 15%;
}

.price-text {
    font-size: 3rem;
    line-height: 1.5;
    font-weight: 800;
}

.pricing-column {
    padding: 3% 2%;
}

/* Call to action section  */

/* .cta-h3 {
    font-family: 'Montserrat', sans-serif;
    line-height: 1.5;
    font-size: 3.5rem;
    font-weight: 900;
    color: #fff;
} */

/* Footer Section */

.footer-icons {
    margin: 20px 10px;
    color: black;
}

/* Define the animation */
@keyframes beat {
    0%, 100% {
        transform: scale(1);
    }
    50% {
        transform: scale(1.2);
    }
}

/* Apply the hover effect */
.footer-icons:hover {
    animation: beat 0.5s infinite;
}

/* media queries */
@media (max-width: 1028px) {
    #title {
        text-align: center;
    }
    .title-img {
        position: static;
        transform: rotate(0deg);
    }
}

